src/components/credential-card/d-credential-card.css
:host {
  @apply w-full inline-flex flex-col items-start gap-2.5 px-5 py-5 rounded-lg bg-no-repeat bg-cover bg-gradient-to-r from-primary to-transparent;
  background-image: var(--background-card-url);
}

.between {
  @apply w-full flex justify-between items-start;
}

.heading {
  @apply flex text-xl not-italic font-semibold items-center gap-2;
}

.name {
  @apply text-3xl not-italic font-semibold leading-[20.5px] tracking-[-0.5px];
}

.info {
  @apply inline-flex flex-col items-start gap-2 min-h-32;
}

.description {
  @apply text-xl not-italic font-medium leading-[20.5px] tracking-[-0.5px];
}

.labeled-text {
  @apply flex flex-col gap-0.5 whitespace-nowrap text-lg not-italic leading-[130%] tracking-[-0.5px];
}

.label {
  @apply font-bold;
}

